Fixed Broken layout for Badge with 'variant=dot' and right section #6751

--- a/packages/@mantine/core/src/components/Badge/Badge.module.css
+++ b/packages/@mantine/core/src/components/Badge/Badge.module.css
@@ -53,7 +53,7 @@
   }
 
   &:where([data-with-left-section], [data-variant='dot']) {
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 1fr auto;
   }
 
   &:where([data-with-left-section][data-with-right-section]) {
